# trabajodegradoback

./: .coverage  Procfile  main.py  pyproject.toml  requirements.txt  to-requirements.txt
app/: __init__.py  config.py  routes.py
domain/: models.py  repositories.py  services.py  value_objects.py
infrastructure/: api_exceptions.py  omdb_client.py  repositories.py  tmdb_client.py
tests/: conftest.py  test_movie_service.py
