[tool.poetry]
name = "trabajodegradoback"
version = "0.1.0"
description = ""
authors = ["KevinGuzmanY <kevinyorney123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"to-requirements.txt" = "^2.0.11"
flask = "^3.0.3"
pytest = "^8.3.3"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
scikit-learn = "^1.5.2"
requests = "^2.32.3"
poetry = "^1.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
